# lzw-cpp

./: .gitignore  benchmark.ods  decoder.cpp  encoder.cpp  init-dict.cpp  lzw  lzw-debug  lzw.h  main.cpp  meson.build
testcases/decoded/: kennedy.decoded  lcet10.decoded  plrabn12.decoded  world192.decoded
testcases/encoded/: E.lzw  aaa.lzw  alice29.lzw  alphabet.lzw  asyoulik.lzw  bible.lzw  cp.lzw  fields.lzw  grammar.lzw  kennedy.lzw  lcet10.lzw  plrabn12.lzw  ptt5.lzw  random.lzw  sum.lzw  world192.lzw  xargs.lzw
